# wmip

./: CMakeLists.txt  README.md
wmip/: metadata.desktop
wmip/contents/ui/: main.qml
